# SERAv2

./: README.md  config.yaml  install_gpu.py  install_gpu.sh  pyproject.toml
data/: memory.sqlite3
docs/: ARCHITECTURE_RU.md  MODEL_SELECTION_RU.md
dynamic_tools/: task_specific_helper.py
src/langchain_core/: __init__.py  messages.py  output_parsers.py  outputs.py  prompts.py  runnables.py  tools.py
src/langchain_core/language_models/: chat_models.py
src/langgraph/: prebuilt.py
src/sera_agent/: __init__.py  main.py
src/sera_agent/config/: models.py
src/sera_agent/core/: logging.py  types.py
src/sera_agent/memory/: store.py
src/sera_agent/orchestration/: agent.py
src/sera_agent/runtime/: llm_engine.py
src/sera_agent/safety/: policy.py
src/sera_agent/self_improve/: improver.py
src/sera_agent/tools/: base.py  builtin.py  dynamic_loader.py
src/sera_agent/ui/: server.py
tests/: test_agent_realtime_events.py  test_llm_engine.py  test_main_build_agent.py  test_memory_and_safety.py  test_model.py  test_ui_server_startup.py
workspace/: abilities.txt  capabilities.txt  check_python_version.py  response.txt  weather_check.py  weather_script.py
